# Lift-N-Log

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 4719c48472d6_added_user_and_workout_relationship.py  752738d2ffbf_create_initial_tables.py  8169f501c685_added_user_and_workout_and_exercise_.py  a6fb9c5cbf82_add_exercise_soft_delete_fields.py  ab62d0162aec_added_users_table.py  df5a67c1bd8f_added_username_column_to_users.py
app/: config.py  database.py  dependencies.py  errors.py  main.py  models.py  schemas.py  security.py  seed.py  utils.py
app/core/: config.py  security.py
app/db/: database.py  models.py  seed.py
app/routers/: auth.py  exercises.py  workouts.py
app/services/: auth_service.py  exercise_service.py  workout_service.py
tests/: conftest.py  test_auth.py  test_exercises.py  test_services.py  test_workouts.py
