[project]
name = "fast-api-prac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
]

[tool.fastapi]
entrypoint = "app.main:app"
